# graph-mcp

./: .env.example  .gitignore  CHANGES.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-mcp-image.yml
docs/: architecture.md  auth-implementation.md  auth-setup.md  deployment.md  embeddings.md  getting-started.md  health-checks.md  oidc-proxy.md  usage-guide.md
k8s/: README.md  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml
konnektr_mcp/: __init__.py  auth.py  client_factory.py  config.py  embeddings.py  middleware.py  server.py  tools.py  types.py
